sfSandBoxCode/force-app/main/default/objects/Larvae_Production__c/Larvae_Production__c.object-meta.xml
<CustomObject>
    <label>Larvae Production</label>
    <nameField>
        <label>Larvae Production Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Larvae Production</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>