sfSandBoxCode/force-app/main/default/objects/Larvae_Production__c/fields/Mature_Larvae_KG__c.field-meta.xml
<CustomField>
    <fullName>Mature_Larvae_KG__c</fullName>
    <label>Mature Larvae (KG)</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>