sfSandBoxCode/force-app/main/default/objects/Larvae_Production__c/fields/Substrate_KG__c.field-meta.xml
<CustomField>
    <fullName>Substrate_KG__c</fullName>
    <label>Substrate(KG)</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>