sfSandBoxCode/force-app/main/default/objects/Larvae_Production__c/fields/Total_number_of_trays__c.field-meta.xml
<CustomField>
    <fullName>Total_number_of_trays__c</fullName>
    <label>Total number of trays</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>